--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,9 +22,10 @@
             android:layout_margin="3dp"
             android:layout_weight="4"
             android:ems="10"
-            android:hint="ADD TO DO .."
+            android:hint="@string/add_to_do"
             android:inputType="text"
-            android:textStyle="italic" />
+            android:textColorHint="#6A1B9A"
+            android:autofillHints="" />
 
         <Button
             android:id="@+id/button"
@@ -32,11 +33,16 @@
             android:layout_height="wrap_content"
             android:layout_margin="3dp"
             android:layout_weight="1"
-            android:text="ADD" />
+            android:text="@string/add" />
+
     </LinearLayout>
 
     <ListView
         android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:paddingTop="8dp"
+        tools:listitem="@layout/row_layout" />
+
 </LinearLayout>
