--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,8 @@
             android:hint="@string/add_to_do"
             android:inputType="text"
             android:textColorHint="#6A1B9A"
-            android:autofillHints="" />
+            android:autofillHints=""
+            tools:ignore="VisualLintTextFieldSize" />
 
         <Button
             android:id="@+id/button"
@@ -33,11 +34,44 @@
             android:layout_height="wrap_content"
             android:layout_margin="3dp"
             android:layout_weight="1"
-            android:text="@string/add" />
+            android:text="@string/add"
+            tools:ignore="VisualLintButtonSize" />
 
     </LinearLayout>
 
-    <ListView
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="3dp"
+            android:layout_weight="4"
+            android:gravity="center_horizontal"
+            android:text="@string/click_to_edit"
+            android:textAlignment="center"
+            android:textColor="#37474F"
+            android:textSize="12sp"
+            tools:ignore="TextSizeCheck" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="3dp"
+            android:layout_weight="4"
+            android:gravity="center_horizontal"
+            android:text="@string/long_press_to_delete"
+            android:textAlignment="center"
+            android:textColor="#37474F"
+            android:textSize="12sp"
+            tools:ignore="TextSizeCheck" />
+
+    </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
